--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -10,24 +12,24 @@
         <meta name="author" content="CREATEBRILLIANCE - Media &amp; Consulting">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href={% static 'css/bootstrap.min.css' %}>
         
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href={% static 'css/font-awesome.min.css' %}>
 
-		<link rel="stylesheet" href="owl-carousel/owl.carousel.css">
-        <link rel="stylesheet" href="owl-carousel/owl.theme.css">
+		<link rel="stylesheet" href={% static 'owl-carousel/owl.carousel.css' %}>
+        <link rel="stylesheet" href={% static 'owl-carousel/owl.theme.css' %}>
  
-		<link rel="stylesheet" href="css/magnific-popup.css">
+		<link rel="stylesheet" href={% static 'css/magnific-popup.css' %}>
 		
-		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href={% static 'css/animate.css' %}>
 		
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href={% static 'css/main.css' %}>
 
-		<link rel="stylesheet" href="css/colorscheme-1.css">
+		<link rel="stylesheet" href={% static 'css/colorscheme-1.css' %}>
 		
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7cOpen+Sans:100,200,300,400,700' rel='stylesheet' type='text/css'> 
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src={% static 'js/vendor/modernizr-2.6.2-respond-1.1.0.min.js' %}></script>
         
         <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
         
@@ -37,7 +39,7 @@
     
     <body>
     <!--Preloader-->	
-	<div id="preloader"><div id="spinner_container"><div class="company"><div class="border">JOHN SLAMR <img src="img/assets/spinner.gif" alt="" /></div></div></div></div>
+	<div id="preloader"><div id="spinner_container"><div class="company"><div class="border">JOHN SLAMR <img src={% static 'img/assets/spinner.gif' %} alt="" /></div></div></div></div>
 	
 	<!--<nav class="navbar navbar-custom navbar-fixed-top static-background" role="navigation">-->
 	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -88,11 +90,11 @@
 	</div>
 	</footer>
 
-  		<script type="text/javascript" src="js/vendor/jquery-1.10.1.min.js"></script>
-		<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/plugins.js"></script>
-		<script type="text/javascript" src="owl-carousel/owl.carousel.min.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
+  		<script type="text/javascript" src={% static 'js/vendor/jquery-1.10.1.min.js' %}></script>
+		<script type="text/javascript" src={% static 'js/vendor/bootstrap.min.js' %}></script>
+		<script type="text/javascript" src={% static 'js/plugins.js' %}></script>
+		<script type="text/javascript" src={% static 'owl-carousel/owl.carousel.min.js' %}></script>
+		<script type="text/javascript" src={% static 'js/main.js' %}></script>
 
 		<script>
 			$(document).ready(function(){		
