--- a/core/templates/index-image.html
+++ b/core/templates/index-image.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -10,24 +12,24 @@
         <meta name="author" content="CREATEBRILLIANCE - Media &amp; Consulting">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href={% static 'css/bootstrap.min.css' %}>
         
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href={% static 'css/font-awesome.min.css' %}>
 
-		<link rel="stylesheet" href="owl-carousel/owl.carousel.css">
-        <link rel="stylesheet" href="owl-carousel/owl.theme.css">
+		<link rel="stylesheet" href={% static 'owl-carousel/owl.carousel.css' %}>
+        <link rel="stylesheet" href={% static 'owl-carousel/owl.theme.css' %}>
  
-		<link rel="stylesheet" href="css/magnific-popup.css">
+		<link rel="stylesheet" href={% static 'css/magnific-popup.css' %}>
 		
-		<link rel="stylesheet" href="css/animate.css">
+		<link rel="stylesheet" href={% static 'css/animate.css' %}>
 		
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href={% static 'css/main.css' %}>
 
-		<link rel="stylesheet" href="css/colorscheme-0.css">
+		<link rel="stylesheet" href={% static 'css/colorscheme-0.css' %}>
 		
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7cOpen+Sans:100,200,300,400,700' rel='stylesheet' type='text/css'> 
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src={% static 'js/vendor/modernizr-2.6.2-respond-1.1.0.min.js' %}></script>
 		
 		<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
         
@@ -36,7 +38,7 @@
     
     <body>
     <!--Preloader-->	
-	<div id="preloader"><div id="spinner_container"><div class="company"><div class="border">JOHN SLAMR <img src="img/assets/spinner.gif" alt="" /></div></div></div></div>
+	<div id="preloader"><div id="spinner_container"><div class="company"><div class="border">JOHN SLAMR <img src={% static 'img/assets/spinner.gif' %} alt="" /></div></div></div></div>
 	
 	<!--<nav class="navbar navbar-custom navbar-fixed-top static-background" role="navigation">-->
 	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -84,13 +86,13 @@
 		</div>
 		<div id="slides">
 			<div class="slides-container">
-				<img src="img/bg-head-2.jpg" alt="" />
+				<img src={% static 'img/bg-head-2.jpg' %} alt="" />
 			</div>
 		</div>
 	</section>
 
 	<section id="welcome">	
-		<img alt="" class="thumb-middle" src="img/user-1.jpg">			
+		<img alt="" class="thumb-middle" src={% static 'img/user-1.jpg' %}>			
 		<div class="container">
 			<div class="row">
 				<div class="hero col-sm-6 col-sm-offset-3">
@@ -175,7 +177,7 @@
 						<p>Hi my name is John Slamr. I'm a 28 year old multi talent from San Francisco.</p>							
 						<p>Let me give you a short introduction of myself, with all the keyfacts. If you want to know more about me just further explore this page. <br>Thanks alot for visiting.</p><br>
 						Kind Regards,							
-						<img src="img/signature.png" class="img-responsive" alt="" />	
+						<img src={% static 'img/signature.png' %} class="img-responsive" alt="" />	
 					</div>				
 			</div>
 		</div><!--container-->
@@ -306,28 +308,28 @@
 			</div>
 			<div id="owl-carousel-clients" class="owl-carousel">
 				<div class="owl-container text-center">
-					<div class="img-client-container animated" data-animation-delay="200" data-animation="fadeInUp"><a href="#" target="_blank"><img src="img/clients/client-01.png" class="img-responsive" alt="" /></a></div><h5>CLIENT 1</h5>
+					<div class="img-client-container animated" data-animation-delay="200" data-animation="fadeInUp"><a href="#" target="_blank"><img src={% static 'img/clients/client-01.png' %} class="img-responsive" alt="" /></a></div><h5>CLIENT 1</h5>
 				</div>
 				<div class="owl-container text-center">
-					<div class="img-client-container animated" data-animation-delay="300" data-animation="fadeInUp"><a href="#" target="_blank"><img src="img/clients/client-02.png" class="img-responsive" alt="" /></a></div><h5>CLIENT 2</h5>
+					<div class="img-client-container animated" data-animation-delay="300" data-animation="fadeInUp"><a href="#" target="_blank"><img src={% static 'img/clients/client-02.png' %} class="img-responsive" alt="" /></a></div><h5>CLIENT 2</h5>
 				</div>
 				<div class="owl-container text-center">
-					<div class="img-client-container animated" data-animation-delay="400" data-animation="fadeInUp"><a href="#" target="_blank"><img src="img/clients/client-03.png" class="img-responsive" alt="" /></a></div><h5>CLIENT 3</h5>
+					<div class="img-client-container animated" data-animation-delay="400" data-animation="fadeInUp"><a href="#" target="_blank"><img src={% static 'img/clients/client-03.png' %} class="img-responsive" alt="" /></a></div><h5>CLIENT 3</h5>
 				</div>
 				<div class="owl-container text-center">
-					<div class="img-client-container animated" data-animation-delay="500" data-animation="fadeInUp"><a href="#" target="_blank"><img src="img/clients/client-04.png" class="img-responsive" alt="" /></a></div><h5>CLIENT 4</h5>
+					<div class="img-client-container animated" data-animation-delay="500" data-animation="fadeInUp"><a href="#" target="_blank"><img src={% static 'img/clients/client-04.png' %} class="img-responsive" alt="" /></a></div><h5>CLIENT 4</h5>
 				</div>
 				<div class="owl-container text-center">
-					<div class="img-client-container animated" data-animation-delay="600" data-animation="fadeInUp"><a href="#" target="_blank"><img src="img/clients/client-05.png" class="img-responsive" alt="" /></a></div><h5>CLIENT 5</h5>
+					<div class="img-client-container animated" data-animation-delay="600" data-animation="fadeInUp"><a href="#" target="_blank"><img src={% static 'img/clients/client-05.png' %} class="img-responsive" alt="" /></a></div><h5>CLIENT 5</h5>
 				</div>
 				<div class="owl-container text-center">
-					<div class="img-client-container animated" data-animation-delay="700" data-animation="fadeInUp"><a href="#" target="_blank"><img src="img/clients/client-06.png" class="img-responsive" alt="" /></a></div><h5>CLIENT 6</h5>
+					<div class="img-client-container animated" data-animation-delay="700" data-animation="fadeInUp"><a href="#" target="_blank"><img src={% static 'img/clients/client-06.png' %} class="img-responsive" alt="" /></a></div><h5>CLIENT 6</h5>
 				</div>
 				<div class="owl-container text-center">
-					<div class="img-client-container animated" data-animation-delay="800" data-animation="fadeInUp"><a href="#" target="_blank"><img src="img/clients/client-07.png" class="img-responsive" alt="" /></a></div><h5>CLIENT 7</h5>
+					<div class="img-client-container animated" data-animation-delay="800" data-animation="fadeInUp"><a href="#" target="_blank"><img src={% static 'img/clients/client-07.png' %} class="img-responsive" alt="" /></a></div><h5>CLIENT 7</h5>
 				</div>
 				<div class="owl-container text-center">
-					<div class="img-client-container animated" data-animation-delay="900" data-animation="fadeInUp"><a href="#" target="_blank"><img src="img/clients/client-08.png" class="img-responsive" alt="" /></a></div><h5>CLIENT 8</h5>
+					<div class="img-client-container animated" data-animation-delay="900" data-animation="fadeInUp"><a href="#" target="_blank"><img src={% static 'img/clients/client-08.png' %} class="img-responsive" alt="" /></a></div><h5>CLIENT 8</h5>
 				</div>
 			</div><!--carousel-->
 		</div>
@@ -466,7 +468,7 @@
 			<div class="col-sm-4" data-group="graphics,web">
 				<div class="portfolio-link">
 					<div class="portfolio-hover">
-						<div class="img"><img src="img/portfolio/port-1.jpg" alt=""></div>
+						<div class="img"><img src={% static 'img/portfolio/port-1.jpg' %} alt=""></div>
 						<div class="info dark">
 							<h2>Photoshop Text Effect</h2>
 							<p>Graphics | Web</p>
@@ -478,11 +480,11 @@
 						<div class="row">
 							<div class="col-md-8">
 								<div id="carousel-port" class="owl-carousel owl-portfolio">
-									<div class="item"><img class="lazyOwl img-responsive" data-src="img/portfolio/port-1-2.jpg" src="#" alt="" />
+									<div class="item"><img class="lazyOwl img-responsive" data-src={% static 'img/portfolio/port-1-2.jpg' %} src="#" alt="" />
 									</div>
-									<div class="item"><img class="lazyOwl img-responsive" data-src="img/portfolio/port-1-3.jpg" src="#" alt="" />
+									<div class="item"><img class="lazyOwl img-responsive" data-src={% static 'img/portfolio/port-1-3.jpg' %} src="#" alt="" />
 									</div>
-									<div class="item"><img class="lazyOwl img-responsive" data-src="img/portfolio/port-1-4.jpg" src="#" alt="" />
+									<div class="item"><img class="lazyOwl img-responsive" data-src={% static 'img/portfolio/port-1-4.jpg' %} src="#" alt="" />
 									</div>
 								</div>
 								<h5>PROJECT DESCRIPTION</h5>
@@ -528,7 +530,7 @@
 			<div class="col-sm-4" data-group="mockup">   
 				<div class="portfolio-link">
 					<div class="portfolio-hover">
-						<div class="img"><img src="img/portfolio/port-2.jpg" alt=""></div>
+						<div class="img"><img src={% static 'img/portfolio/port-2.jpg' %} alt=""></div>
 						<div class="info dark">
 							<h2>Project for Client B</h2>
 							<p>Mockup</p>
@@ -539,7 +541,7 @@
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2">
 								<h2>Portfolio Client B</h2>
-								<img src="img/portfolio/port-2-2.jpg" class="img-responsive" alt="" />
+								<img src={% static 'img/portfolio/port-2-2.jpg' %} class="img-responsive" alt="" />
 								<h5>PROJECT DESCRIPTION</h5>
 								<div class="description">
 									<p>
@@ -556,7 +558,7 @@
 			<div class="col-sm-4" data-group="web,mockup,graphics">  
 				<div class="portfolio-link">
 					<div class="portfolio-hover">
-						<div class="img"><img src="img/portfolio/port-3.jpg" alt=""></div>
+						<div class="img"><img src={% static 'img/portfolio/port-3.jpg' %} alt=""></div>
 						<div class="info dark">
 							<h2>Big Project</h2>
 							<p>Web | Mockup | Graphics</p>
@@ -607,7 +609,7 @@
 						
 						<div class="row">
 							<div class="col-sm-6">
-								<img class="img-responsive" src="img/portfolio/port-3-2.jpg" alt="" />
+								<img class="img-responsive" src={% static 'img/portfolio/port-3-2.jpg' %} alt="" />
 							</div>
 							<div class="col-sm-6">
 								Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with 'real' content.
@@ -628,7 +630,7 @@
 								It is said that song composers of the past used dummy texts as lyrics when writing melodies in order to have a 'ready-made' text to sing with the melody. Dummy texts have been in use by typesetters since the 16th century. 
 							</div>
 							<div class="col-sm-6">
-								<img class="img-responsive" src="img/portfolio/port-3-3.jpg" alt="" />
+								<img class="img-responsive" src={% static 'img/portfolio/port-3-3.jpg' %} alt="" />
 							</div>
 						</div>
 						
@@ -647,7 +649,7 @@
 			<div class="col-sm-4" data-group="web">   
 				<div class="portfolio-link">
 					<div class="portfolio-hover">
-						<div class="img"><img src="img/portfolio/port-4.jpg" alt=""></div>
+						<div class="img"><img src={% static 'img/portfolio/port-4.jpg' %} alt=""></div>
 						<div class="info dark">
 							<h2>App Design</h2>
 							<p>Web</p>
@@ -658,7 +660,7 @@
 						<div class="row">
 							<div class="col-md-8 col-md-offset-2">
 								<h2>App Design</h2>
-								<img class="img-responsive" src="img/portfolio/port-4-2.jpg" alt="" />
+								<img class="img-responsive" src={% static 'img/portfolio/port-4-2.jpg' %} alt="" />
 								<div class="row">
 									<div class="col-md-4">
 										<div class="date">
@@ -692,7 +694,7 @@
 			<div class="col-sm-4" data-group="graphics,mockup">   
 				<div class="portfolio-link">
 					<div class="portfolio-hover">
-						<div class="img"><img src="img/portfolio/port-5.jpg" alt=""></div>
+						<div class="img"><img src={% static 'img/portfolio/port-5.jpg' %} alt=""></div>
 						<div class="info dark">
 							<h2>PSD Mockup</h2>
 							<p>Graphics | Mockup</p>
@@ -749,7 +751,7 @@
 			<div class="col-sm-4" data-group="web,mockup">   
 				<div class="portfolio-link">
 					<div class="portfolio-hover">
-						<div class="img"><img src="img/portfolio/port-6.jpg" alt=""></div>
+						<div class="img"><img src={% static 'img/portfolio/port-6.jpg' %} alt=""></div>
 						<div class="info dark">
 							<h2>The Shirt</h2>
 							<p>Web | Mockup</p>
@@ -760,7 +762,7 @@
 						<h2>The Shirt</h2>
 						<div class="row">
 							<div class="col-md-8">
-								<img class="img-responsive" src="img/portfolio/port-6-2.jpg" alt="" />
+								<img class="img-responsive" src={% static 'img/portfolio/port-6-2.jpg' %} alt="" />
 
 								<h5>PROJECT DESCRIPTION</h5>
 								<div class="description">
@@ -820,10 +822,10 @@
 						<div class="image">
 							<div id="owl-carousel-blog" class="owl-carousel">
 								<div class="owl-container">
-									<div class="img-blog-container"><a href="#" target="_blank"><img src="img/blog/blog-1.jpg" class="img-responsive" alt="" /></a></div>
+									<div class="img-blog-container"><a href="#" target="_blank"><img src={% static 'img/blog/blog-1.jpg' %} class="img-responsive" alt="" /></a></div>
 								</div>
 								<div class="owl-container">
-									<div class="img-blog-container"><a href="#" target="_blank"><img src="img/blog/blog-2.jpg" class="img-responsive" alt="" /></a></div>
+									<div class="img-blog-container"><a href="#" target="_blank"><img src={% static 'img/blog/blog-2.jpg' %} class="img-responsive" alt="" /></a></div>
 								</div>								
 							</div><!--carousel-->
 						</div>
@@ -883,7 +885,7 @@
 					</div>
 					<div class="col-sm-6">
 						<div class="image">
-							<img src="img/blog/blog-3.jpg" class="img-responsive image-modal" data-mfp-src="img/blog/blog-3.jpg"  alt="" title="This is the title">
+							<img src={% static 'img/blog/blog-3.jpg' %} class="img-responsive image-modal" data-mfp-src={% static 'img/blog/blog-3.jpg' %}  alt="" title="This is the title">
 						</div>
 					</div>
 				</div>
@@ -940,19 +942,19 @@
 			</div>
 				<div class="col-md-10 col-md-offset-1">
 					<div id="owl-carousel-testimonial" class="owl-carousel">
-						<div class="img-testimonial-container animated" data-animation-delay="400" data-animation="fadeInUp"><img src="img/testimonials/testimonial-1.jpg" class="img-responsive img-circle" alt="" />
+						<div class="img-testimonial-container animated" data-animation-delay="400" data-animation="fadeInUp"><img src={% static 'img/testimonials/testimonial-1.jpg' %} class="img-responsive img-circle" alt="" />
 							<p>
 								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
 							</p>
 							<cite title="Source Title" class="text-mute">John Adams (CEO - Company)</cite>
 						</div>
-						<div class="img-testimonial-container animated" data-animation-delay="400" data-animation="fadeInUp"><img src="img/testimonials/testimonial-2.jpg" class="img-responsive img-circle" alt="" />
+						<div class="img-testimonial-container animated" data-animation-delay="400" data-animation="fadeInUp"><img src={% static 'img/testimonials/testimonial-2.jpg' %} class="img-responsive img-circle" alt="" />
 							<p>
 								Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. <b>I LOVE IT</b>
 							</p>
 							<cite title="Source Title" class="text-mute">Peter Frownd (Graphic Designer)</cite>
 						</div>
-						<div class="img-testimonial-container animated" data-animation-delay="400" data-animation="fadeInUp"><img src="img/testimonials/testimonial-3.jpg" class="img-responsive img-circle" alt="" />
+						<div class="img-testimonial-container animated" data-animation-delay="400" data-animation="fadeInUp"><img src={% static 'img/testimonials/testimonial-3.jpg' %} class="img-responsive img-circle" alt="" />
 							<p>
 								Lorem ipsum dolor sit amet, consetetur sadipscing elitr
 							</p>
@@ -1127,11 +1129,11 @@
 	</div>
 	</footer>
 
-  		<script type="text/javascript" src="js/vendor/jquery-1.10.1.min.js"></script>
-		<script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/plugins.js"></script>
-		<script type="text/javascript" src="owl-carousel/owl.carousel.min.js"></script>
-		<script type="text/javascript" src="js/main.js"></script>
+  		<script type="text/javascript" src={% static 'js/vendor/jquery-1.10.1.min.js' %}></script>
+		<script type="text/javascript" src={% static 'js/vendor/bootstrap.min.js' %}></script>
+		<script type="text/javascript" src={% static 'js/plugins.js' %}></script>
+		<script type="text/javascript" src={% static 'owl-carousel/owl.carousel.min.js' %}></script>
+		<script type="text/javascript" src={% static 'js/main.js' %}></script>
 
 		<script>
 			$(document).ready(function(){		
