--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -39,7 +39,7 @@
     
     <body>
     <!--Preloader-->	
-	<div id="preloader"><div id="spinner_container"><div class="company"><div class="border">JOHN SLAMR <img src={% static 'img/assets/spinner.gif' %} alt="" /></div></div></div></div>
+	<div id="preloader"><div id="spinner_container"><div class="company"><div class="border">GIULIAN GONÇALVES VIVAN <img src={% static 'img/assets/spinner.gif' %} alt="" /></div></div></div></div>
 	
 	<!--<nav class="navbar navbar-custom navbar-fixed-top static-background" role="navigation">-->
 	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -48,16 +48,12 @@
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
 					<i class="fa fa-bars"></i>
 				</button>
-			<div class="company"><div class="border">JOHN SLAMR</div></div>
+			<div class="company"><div class="border">GIULIAN GONÇALVES VIVAN</div></div>
 			</div>
 			<div class="collapse navbar-collapse navbar-right navbar-main-collapse">
 				<ul class="nav navbar-nav">				
 					<li><a href="#welcome">Welcome</a></li>
 					<li><a href="#cv">Curriculum</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#blog">Blog</a></li>
-					<li><a href="#awards">Awards</a></li>
-					<li><a href="#contact">Contact</a></li>				
 				</ul>
 			</div>				
 		</div>			
@@ -83,7 +79,7 @@
 		<div class="row">
 			<div class="col-md-12">
 				<p class="copy">
-					&copy; <strong>JOHN SLAMR</strong> 2014 | TEMPLATE CREATED BY <a href="http://www.createbrilliance.com" target="_blank">CREATEBRILLIANCE - Media &amp; Consulting</a>
+					&copy; <strong>GIULIAN GONÇALVES VIVAN</strong> 2020 | TEMPLATE CREATED BY <a href="http://www.createbrilliance.com" target="_blank">CREATEBRILLIANCE - Media &amp; Consulting</a>
 				</p>
 			</div>
 		</div>
